--- a/benchmarks/setup/default/zeebe-values.yaml
+++ b/benchmarks/setup/default/zeebe-values.yaml
@@ -67,6 +67,10 @@ env:
     value: "true"
   - name: ATOMIX_LOG_LEVEL
     value: INFO
+  - name: ZEEBE_BROKER_DATA_DISKSPACECOMMANDWATERMARK
+    value: "0.8"
+  - name: ZEEBE_BROKER_DATA_DISKSPACEREPLICATIONWATERMARK
+    value: "0.9"
 
 # RESOURCES
 resources:
